# FnD_discord_bot

./: .env  .gitignore  Cargo.toml
src/: admin.rs  lib.rs  main.rs  member.rs  util.rs
