[package]
name = "fnd"
version = "0.1.0"
authors = ["Typas <typascake@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Typas/FnD_discord_bot"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fnd"
path = "src/lib.rs"

[[bin]]
name = "bot"
path = "src/main.rs"

[dependencies]
serenity = "0.8"
dotenv = "0.15"
regex = "1"
rand = "0.7"
byteorder = "1"
